# techne

./: .gitignore  README.md  pyproject.toml
configs/: agent_training.yaml  default.yaml  distill_off_policy.yaml  fspd_config.yaml  rl_on_policy.yaml
examples/maths/: README.md
examples/maths/configs/: distill.yaml  rl.yaml  rl_blackbox.yaml  rl_whitebox.yaml  sft.yaml
examples/maths/scripts/: benchmark_cache.py  black_box_agent.py  evaluate.py  generate_data.py  inspect_data.py  math_agent.py  prepare_data.py  rewards.py  test_simple_query.py  train_distill.py  train_rl.py  train_rl_blackbox.py  train_rl_whitebox.py  train_sft.py
techne/: __init__.py  agent.py  config.py  data.py  transform.py
techne/data/: __init__.py  formatter.py  masking.py
techne/integrations/: __init__.py
techne/integrations/huggingface/: __init__.py  model.py
techne/memory/: verlog.py
techne/rollout/: __init__.py  external.py  orchestrator.py  parser.py
techne/rollout/backends/: __init__.py  base.py  huggingface.py  sglang.py  vllm.py
techne/tools/: __init__.py  base.py  executor.py  sandbox.py
techne/training/: __init__.py  alignment.py  async_rl.py  data_gen.py  distill.py  estimators.py  model.py  rewards.py  rl.py  sft.py  trainer.py
tests/: test_config.py  test_external.py  test_external_edge_cases.py  test_fsdp_config.py  test_parser.py  test_tokenization.py  test_tools.py  test_verlog.py
